--- a/index.html
+++ b/index.html
@@ -109,8 +109,13 @@
         }
 
         @media screen and (max-width: 768px) {
+            h1 {
+                font-size: 1.5em;
+                margin-bottom: 15px;
+            }
             .calendar {
                 margin: 10px 0;
+                transform: scale(0.85); /* Reduce size by 15% */
             }
         }
 
@@ -160,11 +165,9 @@
 
         function formatTime(date) {
             let hours = date.getHours();
-            const minutes = date.getMinutes();
             const ampm = hours >= 12 ? 'PM' : 'AM';
             hours = hours % 12;
             hours = hours ? hours : 12; // the hour '0' should be '12'
-            const minutesStr = minutes < 10 ? '0' + minutes : minutes;
             return `${hours}${ampm}`;
         }
 
